--- a/public/main.css
+++ b/public/main.css
@@ -89,7 +89,7 @@ a {
   }
 
   .background-stars {
-    background-color: #DFDBE5;
+    background-color: #3b3b3b;
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24'%3E%3Cg fill='%239C92AC' fill-opacity='0.4'%3E%3Cpolygon fill-rule='evenodd' points='8 4 12 6 8 8 6 12 4 8 0 6 4 4 6 0 8 4'/%3E%3C/g%3E%3C/svg%3E"); background-position: center;
     background-attachment: fixed;
     animation: stars-scrolling 30s ease-in-out infinite;
@@ -242,22 +242,21 @@ a {
   50% {
     opacity: 1;
   }
-  0% {
-    opacity: 0;
-  }
 }
 .dot-navigation-container {
   position: fixed;
-  top: 0;
-  bottom: 0;
-  right: 20px;
+  bottom: 20px;
+  left: 0;
+  right: 0;
   margin: auto;
   height: fit-content;
   z-index: 1000;
+  display: flex;
+  justify-content: center;
 }
 
 .dot-navigation {
-  display: block;
+  display: flex;
 }
 
 .dot {
@@ -267,10 +266,11 @@ a {
   background-color: #fff;
   opacity: 0.5;
   border-radius: 50%;
-  margin-bottom: 10px;
+  margin-right: 10px;
 }
 
 .dot.active {
   opacity: 1;
 }
+
 
