bug fix style fix

--- a/views/index.html
+++ b/views/index.html
@@ -11,12 +11,16 @@
     <link rel="stylesheet" href="nav.css">
     <link rel="stylesheet" href="bg.css">
     <link rel="stylesheet" href="particles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha384-KyZXEAg3QhqLMpG8r+Knujsl5y6p+4g0S3mZYDTD3ZHgA2v4XBi2K4NKx4Obx3p4" crossorigin="anonymous" />
+
 </head>
 
 <body>
 
     <div class="main-content">
-
+      <div class="navbar-indicator">
+        <i class="fa-solid fa-chevron-up"></i>
+      </div>      
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark sneak-peek">
                 <div class="container">
                   <a class="navbar-brand" href="#">DarchAI</a>
@@ -80,7 +84,7 @@
                 </div>
             </section>
         
-            <section class="section full-page-section scroll-section">
+            <section class="section full-page-section scroll-section background-clouds">
                 <div class="container text-center scroll-zoom">
                     <h3>Contact Us</h3>
                     <p>Have any questions or need support? Get in touch with our team, and we'll be happy to help.</p>
