--- a/views/index.html
+++ b/views/index.html
@@ -18,12 +18,14 @@
 <body>
 
     <div class="main-content">
-      <div class="navbar-indicator">
-        <i class="fa-solid fa-chevron-up"></i>
-      </div>      
+        <div class="navbar-indicator"></div>     
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark sneak-peek">
                 <div class="container">
-                  <a class="navbar-brand" href="#">DarchAI</a>
+                  <a class="navbar-brand" href="#">
+                    <img src="darch_whitepy.png" class="logo-img">
+                    DarchAI
+                  </a>
+
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
