--- a/views/index.html
+++ b/views/index.html
@@ -6,7 +6,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>    
-    <title>Landing Page</title>
+    <title>Darch AI</title>
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="nav.css">
     <link rel="stylesheet" href="bg.css">
@@ -66,17 +66,17 @@
                     <img src="darch_whitepy.png" style="max-width: 100%; height:25vh">
                     <h1 class="primary-text gradient-text">Welcome to the future of debate</h1>
                     <h2 class="primary-text gradient-text">Welcome to DarchAI</h2>
-                    <button class="cta-button btn-grad-blue" onclick="(()=>{scrollToSection(1);})()">Get Started</button>
+                    <button class="cta-button btn-grad-blue" onclick="(()=>{scrollToSection(1);})()">Get Started <i class="fa-sharp fa-solid fa-arrow-right" style="margin-left: 10px;"></i></button>
                 </div>
             </section>
             <section class="section full-page-section scroll-section">
                 <div class="" id="particles-js"></div>
-                <div class="content-container">
+                <div class="content-container" style="pointer-events: none;">
                   <div class="container text-center scroll-zoom" id = "section_two_content">
                     <h3 class="primary-text primary-shadow">A new era of debate</h3>
-                    <p class="primary-text primary-shadow" style="text-shadow: 2px, 2px, 2px, rgb(255, 0, 0);">Automating the most boring part of the activity to make the activity more enjoyable for everyone</p>
+                    <p class="primary-text primary-shadow" style="text-shadow: 2px, 2px, 2px, rgb(255, 0, 0);">The world's first automatic card finder. Just input your argument and you're good to go!</p>
                     <button class="cta-button btn-grad-blue-gray">
-                      Explore Products <i class="fa-sharp fa-solid fa-arrow-right" style="margin-left: 10px;"></i>
+                      Let's Go! <i class="fa-sharp fa-solid fa-arrow-right" style="margin-left: 10px;"></i>
                     </button>
                   </div>
                 </div>
