--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,55 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>    
-    <title>Darch AI</title>
+    <%-include("partials/header.ejs")%>
     <link rel="stylesheet" href="main.css">
-    <link rel="stylesheet" href="nav.css">
     <link rel="stylesheet" href="bg.css">
     <link rel="stylesheet" href="particles.css">
-    <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css"
-  />
 </head>
 
 <body>
 
     <div class="main-content">
         <div class="navbar-indicator"></div>     
-            <nav class="navbar navbar-expand-lg navbar-dark bg-dark sneak-peek">
-                <div class="container">
-                  <a class="navbar-brand" href="#">
-                    <img src="darch_whitepy.png" class="logo-img">
-                    DarchAI
-                  </a>
-
-                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                  </button>
-                  <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav ms-auto">
-                      <li class="nav-item">
-                        <a class="nav-link" href="#">Home</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="#">Features</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="#">Pricing</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
-                      </li>
-                    </ul>
-                  </div>
-                </div>
-              </nav> 
-
+        <%- include("partials/nav.ejs")%>
         <div class = "horizontal-scroll">
             <section class="section full-page-section scroll-section">
                 <div class="shooting-star-container">
@@ -75,9 +37,9 @@
                   <div class="container text-center scroll-zoom" id = "section_two_content">
                     <h3 class="primary-text primary-shadow">A new era of debate</h3>
                     <p class="primary-text primary-shadow" style="text-shadow: 2px, 2px, 2px, rgb(255, 0, 0);">The world's first automatic card finder. Just input your argument and you're good to go!</p>
-                    <button class="cta-button btn-grad-blue-gray">
+                    <a href="/interface"><button class="cta-button btn-grad-blue-gray">
                       Let's Go! <i class="fa-sharp fa-solid fa-arrow-right" style="margin-left: 10px;"></i>
-                    </button>
+                    </button></a>
                   </div>
                 </div>
               </section>              
