--- a/views/index.ejs
+++ b/views/index.ejs
@@ -74,13 +74,13 @@
             <p>&copy; 2023 DarchAI. All rights reserved.</p>
         </footer>
 
-
+    <%-include("partials/footer")%>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <script src="scroller.js"></script>
     <script src="nav.js"></script>
     <script src="main.js"></script>
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <script src="particlesmain.js"></script>
-
+    
 </body>
 </html>
