--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -2,7 +2,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark sneak-peek">
     <div class="container">
       <a class="navbar-brand" href="/">
-        <img src="darch_whitepy.png" class="logo-img">
+        <img src="/darch_whitepy.png" class="logo-img">
         DarchAI
       </a>
 
