--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -15,10 +15,10 @@
             <a class="nav-link" href="/">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Interface</a>
+            <a class="nav-link" href="/interface">Interface</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Pricing</a>
+            <a class="nav-link" href="/progress">Task Dashboard</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Contact</a>
