--- a/views/evidence.ejs
+++ b/views/evidence.ejs
@@ -16,10 +16,12 @@
         <div class="card my-3 evidence-card">
             <div class="card-header justify-content-between align-items-center" id="heading<%= cardId %>" data-bs-toggle="collapse" data-bs-target="#collapse<%= cardId %>" aria-expanded="false" aria-controls="collapse<%= cardId %>" style="cursor: pointer;">
               <div>
-                <span class="tagline"><%= evidenceItem.tagline %></span> <br><hr> <a href="<%= url %>" target="_blank" class="evidence-url"><%= url %></a>
-                <span class="citation"><%= evidenceItem.citation %></span>
+                <span class="tagline"><%= evidenceItem.tagline %></span> <br><hr> 
+                <span class="citation"><%= evidenceItem.citation %> - </span>
+                <a href="<%= url %>" target="_blank" class="evidence-url"><%= url %></a>
+                <input type="checkbox" class="evidence-checkbox custom-checkbox" data-url="<%= url %>" data-index="<%= index %>" data-evidence="<%=evidenceItem.id%>">
               </div>
-              <input type="checkbox" class="evidence-checkbox custom-checkbox" data-url="<%= url %>" data-index="<%= index %>" data-evidence="<%=evidenceItem.id%>">
+              
             </div>
           <div id="collapse<%= cardId %>" class="collapse" aria-labelledby="heading<%= cardId %>">
             <div class="card-body">
@@ -45,7 +47,7 @@
                     <% } %>
                 <% }) %>
                 <% if (sentenceIndex < evidenceItem.relevant_sentences.length - 1) { %>
-                    <span class="sentence">[...]</span>
+                    <span class="sentence"></span>
                 <% } %>
                 <% }) %>
                 
