--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,21 +4,25 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login</title>
+    <link rel="stylesheet" href="/css/login.css" />
   </head>
   <body>
-    <h1>Login</h1>
-    <form id="login-form">
-      <div>
-        <label for="username">Username:</label>
-        <input type="text" id="username" required />
-      </div>
-      <div>
-        <label for="password">Password:</label>
-        <input type="password" id="password" required />
-      </div>
-      <button type="submit">Login</button>
-    </form>
-    <a href="/register">Register</a>
+    <div class="login-form-container">
+      <h1 style="color: black">Login</h1>
+      <form id="login-form">
+        <div>
+          <label for="username">Username:</label>
+          <input type="text" id="username" required />
+        </div>
+        <div>
+          <label for="password">Password:</label>
+          <input type="password" id="password" required />
+        </div>
+        <button type="submit" class="login-btn">Login</button>
+      </form>
+      <a href="/register">Register</a>
+    </div>
     <script src="/js/login.js"></script>
+    <%-include("partials/footer")%>
   </body>
 </html>
