--- a/views/register.ejs
+++ b/views/register.ejs
@@ -4,8 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Register</title>
+    <link href="/css/register.css" rel="stylesheet">
   </head>
   <body>
+    <div class="login-form-container">
     <h1>Register</h1>
     <form id="register-form">
       <div>
@@ -16,8 +18,11 @@
         <label for="password">Password:</label>
         <input type="password" id="password" required />
       </div>
-      <button type="submit">Register</button>
+      <button type="submit" class="register-btn">Register</button>
     </form>
+    <a href="/" class="back-to-home">Back to Homepage</a>
+  </div>
     <script src="/js/register.js"></script>
+    <%- include("partials/footer")%>
   </body>
 </html>
