allow for email register

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -15,6 +15,10 @@
         <input type="text" id="username" required />
       </div>
       <div>
+        <label for="email">Email:</label>
+        <input type="text" id="email" required />
+      </div>
+      <div>
         <label for="password">Password:</label>
         <input type="password" id="password" required />
       </div>
