--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -25,7 +25,7 @@
           </li>
           <li class="nav-item">
             <%if(user){ %>
-              <a class="nav-link" href="#" style="border-width: 3px; border-color: white;">Hello, <span class="hello-user"><%=user.name%></span></a>
+              <a class="nav-link" href="#" style="border-width: 3px; border-color: white;">Hello, <span class="hello-user"><%=user.username%></span></a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/logout" style="border-width: 3px; border-color: white;">Logout <i class="fa fa-sign-out" aria-hidden="true" style="margin-left: 0.5rem;"></i></a>
