--- a/backend/views/partials/navbar.ejs
+++ b/backend/views/partials/navbar.ejs
@@ -19,7 +19,7 @@
           <a class="nav-link" href="/progress">Task Dashboard</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Contact</a>
+          <a class="nav-link" href="/faq">FAQ</a>
         </li>
         <li class="nav-item">
           <% if (user) { %>
