update available models

--- a/backend/views/ai.ejs
+++ b/backend/views/ai.ejs
@@ -19,13 +19,13 @@
       </div>
       <label for="sentenceModel">Sentence Model</label>
       <select class="form-select" id="sentenceModel" name="sentenceModel">
-        <option value="0">Plato</option>
-        <option value="1">Aristotle</option>
+        <option value="0">Debate</option>
+        <option value="3">General Use</option>
       </select>
       <label for="taglineModel">Tagline Model</label>
       <select class="form-select" id="taglineModel" name="taglineModel">
-        <option value="0">Orion</option>
-        <option value="1">Andromeda</option>
+        <option value="0">Debate</option>
+        <option value="1">General Use</option>
       </select>
       <hr>
       <button type="submit" class="btn btn-primary">Generate Response</button>
