update navbar with new logo

--- a/backend/views/partials/navbar.ejs
+++ b/backend/views/partials/navbar.ejs
@@ -1,8 +1,8 @@
 <!-- navbar.ejs -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-  <div class="container">
+  <div class="container nav">
     <a class="navbar-brand" href="/">
-      <img src="/assets/darch_whitepy.png" alt="DarchAI logo" class="logo-img">
+      <img src="/assets/logo_white_blue.png" alt="DarchAI logo" class="logo-img">
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
