--- a/backend/views/about.ejs
+++ b/backend/views/about.ejs
@@ -18,6 +18,7 @@
             <%- include("partials/member-card", {name: "Ethan Wang", role: "CEO and CTO", email: "ethan.wang@darchai.com"}) %>
             <%- include("partials/member-card", {name: "Digonto Chatterjee", role: "COO", email: "digonto.chatterjee@darchai.com"}) %>
             <%- include("partials/member-card", {name: "John Wang", role: "CFO and CMO", email: "john.wang@darchai.com"}) %>
+            <%- include("partials/member-card", {name: "Elaine Wang", role: "Design", email: ""}) %>
         </div>
     </div>
     <%- include ("partials/footer") %>
