--- a/backend/views/progress.ejs
+++ b/backend/views/progress.ejs
@@ -22,7 +22,8 @@
       </thead>
   
       <tbody>
-        <% tasks.forEach((task, index) => { if (task.status != "error") { %>
+        <% tasks.forEach((task, index) => { %>
+          <% if (task&&task.status != "error") { %>
           <tr data-bs-toggle="collapse" data-bs-target="#collapse<%= task.id %>" aria-expanded="false" aria-controls="collapse<%= task.id %>" class="accordion-toggle">
             <td><%= task.id %></td>
             <td><%= task.argument %></td>
